tests/neg/i12457.scala
import language.`3.1`

trait X [ X <: Z , Z >: X [ R     ] ] // error
